Fix form actions alignment.

--- a/astrobin/static/css/astrobin.css
+++ b/astrobin/static/css/astrobin.css
@@ -1028,7 +1028,6 @@ textarea:focus {
 .form-inline .form-actions {
   background: #333333 url('../images/dark-panel-tile.png');
   border-color: #393939;
-  text-align: right;
 }
 .form-horizontal input[type=text],
 .form-horizontal input[type=password],
